# Quant-dominater

./: .dockerignore  .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
docs/: API_CONTRACT.md  ARCHITECTURE.md  BENCHMARK_RESULTS.md  BLUEPRINT.md  HACKATHON_VALIDATION.md  PRODUCTION_GAP_ANALYSIS.md  PROFILING.md  RESIDUALS.md  RESILIENCE.md  SCORING.md  SECURITY_SANDBOX.md
examples/cpp-engine/: README.md
examples/rust-engine/: Cargo.toml  README.md
examples/rust-engine/src/: main.rs
examples/stub-engine/: Dockerfile  disruptor.go  disruptor_test.go  go.mod  insertsorted_test.go  main.go  uniqueclients_test.go
fixtures/: contestant_outputs.valid.jsonl  events.valid.jsonl
infra/deploy/: Dockerfile  README.md  fly.toml  render.yaml
infra/docker-compose/: README.md  docker-compose.yml  init-timescale.sql
infra/dockerfiles/: leaderboard-api.Dockerfile  telemetry-ingester.Dockerfile
infra/k8s/: 00-namespaces.yaml  01-config.yaml  02-rbac.yaml  03-platform-secret.yaml  10-redpanda.yaml  11-timescaledb.yaml  12-redis.yaml  20-submission-api.yaml  21-sandbox-runner.yaml  22-orchestrator.yaml  23-leaderboard-api.yaml  30-telemetry-ingester.yaml  31-bot-fleet-job.yaml  40-sandbox-pod-template.yaml  41-network-policies.yaml  README.md  kustomization.yaml
infra/k8s/files/: init-timescale.sql
infra/k8s/kind-proof/: bot-fleet-job.tmpl.yaml  engine.yaml
infra/terraform/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
proto/: benchmark.proto
rust/bench-core/: Cargo.toml  build.rs
rust/bench-core/src/: lib.rs  shard.rs  time.rs
rust/bench-core/src/metrics/: histogram.rs  mod.rs  tps.rs
rust/bench-core/src/score/: formula.rs  mod.rs
rust/bench-core/src/telemetry/: event.rs  mod.rs  sink.rs  sink_file.rs  sink_kafka.rs  sink_null.rs
rust/bot-fleet/: Cargo.toml  Dockerfile
rust/bot-fleet/src/: main.rs  pool.rs
rust/reference-orderbook/: Cargo.toml
rust/reference-orderbook/benches/: matching.rs
rust/reference-orderbook/proptest-regressions/: proptests.txt
rust/reference-orderbook/src/: book.rs  lib.rs  oracle.rs  proptests.rs  types.rs
rust/score-engine/: Cargo.toml
rust/score-engine/src/: live.rs  main.rs
rust/telemetry-ingester/: Cargo.toml  Dockerfile  README.md
rust/telemetry-ingester/src/: aggregator.rs  main.rs  sink.rs
rust/telemetry-ingester/src/sink/: redis.rs  timescale.rs
rust/telemetry-ingester/src/source/: file.rs  kafka.rs  mod.rs
rust/validator/: Cargo.toml
rust/validator/src/: compare.rs  edge_cases.rs  main.rs  replay.rs
scripts/: run-chaos-demo.sh  run-console-stack.sh  run-deploy.sh  run-kind-scale-proof.sh  run-live-demo.sh  run-local-demo.sh  run-platform-demo.sh  run-price-time-proof.sh  run-rust-engine-demo.sh  validate-kind-data-plane.sh
services/console-api/: Dockerfile  README.md  go.mod  main.go  main_test.go
services/control-panel/: Dockerfile  README.md  go.mod  main.go
services/control-panel/internal/api/: auth.go  handler.go  routes.go
services/control-panel/internal/executor/: botfleet.go  command.go  engine.go  validator.go
services/control-panel/internal/run/: manager.go  model.go  score.go  state.go
services/control-panel/internal/store/: json_store.go  manager_cancel_race_test.go
services/leaderboard-api/: Dockerfile  README.md  go.mod  main.go
services/leaderboard-api/internal/board/: board.go  board_test.go
services/leaderboard-api/internal/redisboard/: redisboard.go  redisboard_test.go
services/orchestrator/: Dockerfile  README.md  go.mod  main.go
services/orchestrator/internal/api/: auth.go  auth_test.go  handler.go  routes.go
services/orchestrator/internal/executor/: botfleet.go  botfleet_test.go  command.go  engine.go  leaderboard.go  sandbox_engine.go  sandbox_engine_test.go  score.go  score_test.go  validator.go  validator_test.go
services/orchestrator/internal/model/: model.go  proto.go  proto_test.go
services/orchestrator/internal/orchestrator/: manager.go  manager_panic_test.go  manager_shutdown_test.go
services/orchestrator/internal/store/: filelock.go  json_store.go  json_store_test.go
services/sandbox-runner/: Dockerfile  README.md  go.mod  go.sum  main.go
services/sandbox-runner/internal/api/: auth.go  auth_test.go  handler.go  routes.go
services/sandbox-runner/internal/sandbox/: artifact.go  artifact_test.go  concurrency.go  docker_runner.go  docker_runner_test.go  local_runner.go  local_runner_test.go  model.go  resource_sampler.go  resource_sampler_test.go
services/score-engine/: Dockerfile  README.md  go.mod  main.go
services/score-engine/internal/scoring/: model.go  scoring.go  scoring_test.go
services/submission-api/: Dockerfile  README.md  go.mod  main.go
services/submission-api/internal/api/: auth.go  handler.go  routes.go
services/submission-api/internal/model/: model.go  proto.go  proto_test.go
services/submission-api/internal/store/: artifact_store.go  filelock.go  json_store.go  json_store_test.go
shared/go/: README.md  go.mod
shared/go/benchmark/v1/: benchmark.pb.go
web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
web/console-ui/: index.html
web/leaderboard-ui/: index.html
web/src/: App.tsx  index.css  types.ts  useLeaderboard.ts  useTimeseries.ts  vite-env.d.ts
