[package]
name = "bench-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "rt", "macros", "time", "fs", "io-util"] }
prost = "0.13"
hdrhistogram = { version = "7", optional = true }
rdkafka = { version = "0.36", optional = true, default-features = false, features = ["tokio", "cmake-build"] }

[build-dependencies]
prost-build = "0.13"

[features]
default = []
hdr = ["dep:hdrhistogram"]
kafka = ["dep:rdkafka"]
