[package]
name = "bot-fleet"
version = "0.1.0"
edition = "2021"
default-run = "bot-fleet"

[[bin]]
name = "bot-fleet"
path = "src/main.rs"

[[bin]]
name = "price-time-probe"
path = "src/bin/price_time_probe.rs"

[dependencies]
anyhow = "1"
bench-core = { path = "../bench-core" }
clap = { version = "4", features = ["derive", "env"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
tracing-tracy = { version = "0.11", optional = true }

[features]
default = []
kafka = ["bench-core/kafka"]
# Real-time profiling with Tracy. Build with `--features profiling`, launch the
# Tracy server, and run the fleet — order-generation and send zones stream live.
profiling = ["dep:tracing", "dep:tracing-subscriber", "dep:tracing-tracy"]
