[package]
name = "validator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
reference-orderbook = { path = "../reference-orderbook" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
num_cpus = "1"

[dev-dependencies]
tempfile = "3"
